# open-meteo-cpp

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
cmake/: open_meteoConfig.cmake.in
examples/: CMakeLists.txt  example_air_quality.cpp  example_forecast.cpp  example_geocoding.cpp  example_historical.cpp
include/open_meteo/: client.hpp  error.hpp  http_client.hpp  open_meteo.hpp  rate_limit.hpp  retry.hpp  types.hpp
include/open_meteo/models/: air_quality.hpp  climate.hpp  common.hpp  elevation.hpp  ensemble.hpp  flood.hpp  forecast.hpp  geocoding.hpp  historical.hpp  marine.hpp  params.hpp  seasonal.hpp
src/: CMakeLists.txt
src/api/: client.cpp
src/core/: error.cpp  rate_limit.cpp  retry.cpp
src/http/: client.cpp
src/models/: common.cpp  common_glaze_detail.hpp  elevation.cpp  geocoding.cpp  params.cpp  seasonal.cpp
tests/: CMakeLists.txt  glaze_test.cpp  params_test.cpp  parse_benchmark.cpp
tools/: cpp_auto_allowlist.txt  cpp_auto_audit.py
